<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:padding="@dimen/_10sdp"
    android:scrollbars="none"
    tools:context=".activities.SignUpActivity"
    android:background="@color/background1">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="25dp"
        android:elevation="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@color/card_background">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/_10sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/archivo_black"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/createAccount"
                android:textColor="@color/text_color"
                android:textSize="25sp"
                android:layout_marginTop="@dimen/_10sdp"/>

            <FrameLayout
                android:id="@+id/layout_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_gravity="center_horizontal">

                <com.makeramen.roundedimageview.RoundedImageView
                    android:id="@+id/user_Profile"
                    android:layout_width="@dimen/_90sdp"
                    android:layout_height="@dimen/_90sdp"
                    android:background="@drawable/image_background"
                    android:scaleType="centerCrop"
                    app:riv_oval="true"
                    android:src="@drawable/user_profile"/>

            </FrameLayout>

            <EditText
                android:id="@+id/signUp_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:autofillHints="emailAddress"
                android:background="@drawable/edit_text_bg"
                android:hint="@string/userName"
                android:imeOptions="actionNext"
                android:inputType="textPersonName"
                android:padding="@dimen/_12sdp"
                android:textColor="@color/text_color"
                android:textSize="@dimen/_12ssp"
                android:minHeight="48dp"
                android:drawableEnd="@drawable/user"
                android:drawableTint="@color/text_color"
                android:textColorHint="@color/text_color"
                android:importantForAutofill="no"/>

            <EditText
                android:id="@+id/signUp_user_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:autofillHints="emailAddress"
                android:background="@drawable/edit_text_bg"
                android:hint="@string/editTextHint1"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:padding="@dimen/_12sdp"
                android:textColor="@color/text_color"
                android:textSize="@dimen/_12ssp"
                android:minHeight="48dp"
                android:textColorHint="@color/text_color"
                android:importantForAutofill="no"
                android:drawableEnd="@drawable/email"
                android:drawableTint="@color/text_color"/>

            <EditText
                android:id="@+id/signUp_user_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:autofillHints="emailAddress"
                android:background="@drawable/edit_text_bg"
                android:hint="@string/editTextHint2"
                android:inputType="textPassword"
                android:imeOptions="actionDone"
                android:padding="@dimen/_12sdp"
                android:textSize="@dimen/_12ssp"
                android:minHeight="48dp"
                android:textColor="@color/text_color"
                android:textColorHint="@color/text_color"
                android:drawableEnd="@drawable/password"
                android:drawableTint="@color/text_color"/>

            <EditText
                android:id="@+id/signUp_user_cnfpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:autofillHints="emailAddress"
                android:background="@drawable/edit_text_bg"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:imeOptions="actionDone"
                android:padding="@dimen/_12sdp"
                android:textSize="@dimen/_12ssp"
                android:minHeight="48dp"
                android:textColor="@color/text_color"
                android:textColorHint="@color/text_color"
                android:drawableEnd="@drawable/confirm_pass"
                android:drawableTint="@color/text_color"/>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:animateLayoutChanges="true">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/signUp_create_account_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_bg"
                    android:text="@string/sign_up"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_16ssp"
                    android:textStyle="bold"
                    android:padding="@dimen/_10sdp"/>

                <ProgressBar
                    android:id="@+id/signUp_progressBar"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_gravity="center"
                    android:visibility="invisible"
                    android:indeterminate="true"
                    android:indeterminateTint="@color/background1"/>

            </FrameLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/signIn_option_textBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_bg"
                android:text="@string/sign_in"
                android:textColor="@color/white"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:padding="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_10sdp"/>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</ScrollView>